--- a/BugTracker/Web/BugTracker.Web/Views/Companies/Details.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Companies/Details.cshtml
@@ -1,16 +1,16 @@
 ﻿@model BugTracker.Web.ViewModels.Companies.DetailsCompanyViewModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Company Details";
 }
 
 <h1>Details</h1>
 <div>
-    <h4>Company</h4>
+    <h4>@Model.Name</h4>
     <hr />
     @if (this.User.IsInRole("AwaitingAproval"))
     {
-        <div class="alert alert-danger">Your Join request is send to the company administrator and is awaiting aproval.</div>
+        <div class="alert alert-danger">Your Join request is send to the company administrator and is awaiting approval.</div>
     }
     <dl class="row">
         <dt class="col-sm-2">
@@ -29,32 +29,70 @@
         </dd>
     </dl>
 </div>
-    @if (Model.Projects.Count > 0)
-    {
-        <hr />
-        <h4 class="text-center">Projects</h4>
-        <div>
-            @foreach (var project in Model.Projects)
+@if (Model.Projects.Count() > 0)
+{
+    <h4 class="text-center">Projects</h4>
+    <div>
+        @foreach (var project in Model.Projects)
+        {
+            <dl class="row">
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => project.Name)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => project.Name)
+                </dd>
+            </dl>
+            <dl class="row">
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => project.Bugs)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => project.Bugs.Count)
+                </dd>
+            </dl>
+            <hr />
+        }
+    </div>
+    <nav>
+        <ul class="pagination justify-content-center">
+            @if (Model.CurrentPage == 1)
             {
-                <dl class="row">
-                    <dt class="col-sm-2">
-                        @Html.DisplayNameFor(model => project.Name)
-                    </dt>
-                    <dd class="col-sm-10">
-                        @Html.DisplayFor(model => project.Name)
-                    </dd>
-                </dl>
-                <dl class="row">
-                    <dt class="col-sm-2">
-                        @Html.DisplayNameFor(model => project.Bugs)
-                    </dt>
-                    <dd class="col-sm-10">
-                        @Html.DisplayFor(model => project.Bugs.Count)
-                    </dd>
-                </dl>
+                <li class="page-item disabled">
+                    <a class="page-link" href="#">Previous</a>
+                </li>
             }
-        </div>
-    }
+            else
+            {
+        <li class="page-item">
+            <a class="page-link"
+               href="@Url.Action("Details", "Companies", new { id = Model.Id, page = (this.Model.CurrentPage - 1) })">Previous</a>
+        </li>
+            }
+            @for (int i = 1; i <= this.Model.PagesCount; i++)
+            {
+                var active = i == this.Model.CurrentPage ? "active" : string.Empty;
+        <li class="page-item @active">
+            <a class="page-link"
+               href="@Url.Action("Details", "Companies", new { id = Model.Id, page = i })">@i</a>
+        </li>
+            }
+            @if (Model.CurrentPage == Model.PagesCount)
+            {
+                <li class="page-item disabled">
+                    <a class="page-link" href="#">Next</a>
+                </li>
+            }
+            else
+            {
+                <li class="page-item">
+                    <a class="page-link"
+                       href="@Url.Action("Details", "Companies", new { id = Model.Id, page = (this.Model.CurrentPage + 1) })">Next</a>
+                </li>
+            }
+        </ul>
+    </nav>
+}
 
 <div>
     @if (this.User.IsInRole("CompanyAdministrator"))
