--- a/BugTracker/Web/BugTracker.Web/Views/Projects/Details.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Projects/Details.cshtml
@@ -159,7 +159,7 @@
                     var active = i == this.Model.CurrentPage ? "active" : string.Empty;
                     <li class="page-item @active">
                         <a class="page-link"
-                           href="@Url.Action("Details", "Projects", new { id = Model.Id, page = @i })">@i</a>
+                           href="@Url.Action("Details", "Projects", new { id = Model.Id, page = i })">@i</a>
                     </li>
                 }
                 @if (Model.CurrentPage == Model.PagesCount)
