--- a/BugTracker/Web/BugTracker.Web/Views/Shared/_Layout.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Shared/_Layout.cshtml
@@ -68,7 +68,6 @@
         <i class="fas fa-angle-up"></i>
     </a>
 
-    <!-- Bootstrap core JavaScript-->
     <script src="~/vendor/jquery/dist/jquery.min.js"></script>
     <script src="~/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
@@ -76,7 +75,8 @@
 
     <script src="~/vendor/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.min.js"></script>
 
-    <!-- Custom scripts for all pages-->
+    <script src="~/vendor/moment/min/moment-with-locales.min.js" asp-append-version="true"></script>
+
     <script src="~/js/site.min.js"></script>
 
     @RenderSection("Scripts", required: false)
