Added info in index and projects to news

--- a/BugTracker/Web/BugTracker.Web/Views/Home/Index.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Home/Index.cshtml
@@ -4,5 +4,16 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome to my Bug Tracker</h1>
-    <p>Short summary.</p>
+    <p>
+        This is a simple bug tracking web application that I have made for my web development course. In order to use it you need to create a account or login with your Google or  Microsoft account. 
+    </p>
+    <p>
+        When you are signed in you will need to create or join a company (Joining requires approval from the company administrator). When you have a company you can view it's projects if it   has any and report any bugs that those projects have. You can also create news that can be viewed by everyone working on the project that you select.
+    </p>
+    <p>
+        Every user from your company can edit the bugs in the company's projects and add changes to the bug history by adding changes to any values(variable, methods etc.). The whole Bug history is displayed in the details page of any bug. with all changed entities and their old and new values.
+    </p>
+    <p>
+        If you are the company administrator you can crate projects for it and you can create assignments for any of the bugs. You can assign any bug to any of the users that have joined your company. you can edit the company name and description and delete it if you want to.
+    </p>
 </div>
