--- a/BugTracker/Web/BugTracker.Web/Areas/Administration/Views/Companies/AdminIndex.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Areas/Administration/Views/Companies/AdminIndex.cshtml
@@ -7,6 +7,7 @@
 <h1>@ViewData["Title"]</h1>
 <p>
     <a class="btn btn-primary" asp-action="Create">Create New</a>
+    <a class="btn btn-primary" asp-area="Administration" asp-controller="Companies" asp-action="Requests" asp-route-id="@Model.UserId">Join Requests</a>
 </p>
 <div class="row">
     @foreach (var item in Model.Companies)
@@ -17,7 +18,6 @@
                 <p class="card-text">@Html.DisplayFor(modelitem => item.Description)</p>
                 <p class="card-text">Projects: @Html.DisplayFor(modelItem => item.Projects.Count)</p>
                 <a class="btn btn-primary" asp-action="Create" asp-controller="Projects" asp-route-id="@item.Id">Create a Project</a>
-                <a class="btn btn-primary" asp-area="Administration" asp-controller="Companies" asp-action="Requests" asp-route-id="@item.Id">Join Requests</a>
                 <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
                 <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </div>
