--- a/BugTracker/Web/BugTracker.Web/Views/Projects/Index.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Projects/Index.cshtml
@@ -108,7 +108,7 @@
         </ul>
     </nav>
 }
-else
+else if (!this.User.IsInRole("CompanyAdministrator") || !this.User.IsInRole("ProjectAdministrator"))
 {
     <p>The companies you have joined currently don't have any projects. Contact the companies administrators for more information or <a asp-controller="Companies" asp-action="Create">create</a> a new company for yourself and create projects for it.</p>
 }
