--- a/BugTracker/Web/BugTracker.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -73,6 +73,25 @@
                     </form>
                 }
             }
+            <hr />
+            <div class="justify-content-center">
+                <form id="account" method="post" class="justify-content-center">
+                    <h4>Login with a test administrator account to check out the website Admin functionality.</h4>
+                    <hr />
+                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <div class="form-group o-hidden">
+                        <input type="hidden" asp-for="Input.Email" class="form-control o-hidden" value="admin@admin.com" />
+                        <span asp-validation-for="Input.Email" class="text-danger"></span>
+                    </div>
+                    <div class="form-group o-hidden">
+                        <input type="hidden" asp-for="Input.Password" class="form-control o-hidden" value="12345678" />
+                        <span asp-validation-for="Input.Password" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-primary">Log in with an Admin account</button>
+                    </div>
+                </form>
+            </div>
         </section>
     </div>
 </div>
