--- a/BugTracker/Web/BugTracker.Web/Views/Shared/_Layout.cshtml
+++ b/BugTracker/Web/BugTracker.Web/Views/Shared/_Layout.cshtml
@@ -13,42 +13,39 @@
     <link href="~/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="~/css/fontscss.css" rel="stylesheet">
     <!-- Custom styles for this template-->
-    <link href="~/css/sb-admin-2.min.css" rel="stylesheet">
+    <link href="~/css/sb-admin-2.css" rel="stylesheet">
 </head>
-<body id="page-top">
+<body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-light bg-white border-bottom shadow mb-3">
-            <div class="container">
-                @if (SignInManager.IsSignedIn(User))
-                {
-                    <a class="navbar-brand text-dark" asp-area="" asp-controller="Home" asp-action="IndexLogged">Bug Tracker</a>
-                }
-                else
-                {
-                    <a class="navbar-brand text-dark" asp-area="" asp-controller="Home" asp-action="Index">Bug Tracker</a>
-                }
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="topbar-divider d-none d-sm-block"></div>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <partial name="_LoginPartial" />
-                    <ul class="navbar-nav flex-grow-1">
-                        @if (SignInManager.IsSignedIn(User))
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Companies" asp-action="Index">Companies</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Projects" asp-action="Index">Projects</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="News" asp-action="Create">Create News</a>
-                            </li>
-                        }
-                    </ul>
-                </div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-white">
+            @if (SignInManager.IsSignedIn(User))
+            {
+                <a class="navbar-brand text-dark" asp-area="" asp-controller="Home" asp-action="IndexLogged">Bug Tracker</a>
+            }
+            else
+            {
+                <a class="navbar-brand text-dark" asp-area="" asp-controller="Home" asp-action="Index">Bug Tracker</a>
+            }
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse" id="navbarNav">
+                <partial name="_LoginPartial" />
+                <ul class="navbar-nav flex-grow-1">
+                    @if (SignInManager.IsSignedIn(User))
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Companies" asp-action="Index">Companies</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Projects" asp-action="Index">Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="News" asp-action="Create">Create News</a>
+                        </li>
+                    }
+                </ul>
             </div>
         </nav>
     </header>
@@ -65,10 +62,12 @@
         </div>
     </footer>
 
-    <script src="~/vendor/jquery/dist/jquery.js" asp-append-version="true"></script>
+
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="~/wwwroot/vendor/jquery/dist/jquery.js" asp-append-version="true"></script>
     <script src="~/vendor/jquery-validation/dist/jquery.validate.js" asp-append-version="true"></script>
     <script src="~/vendor/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.js" asp-append-version="true"></script>
-    <script src="~/vendor/bootstrap/dist/js/bootstrap.js" asp-append-version="true"></script>
+    <script src="~/vendor/bootstrap/js/bootstrap.js" asp-append-version="true"></script>
     <script src="~/vendor/moment/min/moment-with-locales.min.js" asp-append-version="true"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
